kubernetes/service-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-statefulset
  labels:
    app: flaskvue
spec:
  ports:
  - port: 3306
  clusterIP: None
  selector:
    app: flasvue
